# LutLibrary

./: .gitignore  AlgoTest.piz  CMakeLists.txt  Cleanup.sh  LinuxBuild.sh  LinuxBuils.sh  README.md  WinBuild.cmd  WinCleanup.cmd  WinICCBuild.cmd
3rd/: CMakeLists.txt
3rd/GoogleTest/: CMakeLists.txt
3rd/GoogleTest/googletest/: CMakeLists.txt
3rd/GoogleTest/googletest/cmake/: libgtest.la.in
3rd/rapidxml/: CMakeLists.txt
CMakeConfig/: ColorPrint.cmake  FMA_Support.cmake  LinuxConfig.cmake  Test_AVX512.cmake  Test_CpuArch.cmake  Test_NEON.cmake  WindowsConfig.cmake
Configurations/: LinuxConfig.cmake  WindowsConfig.cmake
GoogleTest/: CMakeLists.txt
GoogleTest/googletest/cmake/: Config.cmake.in  gtest.pc.in  gtest_main.pc.in
LutInterface/: CMakeLists.txt
LutInterpolator/: CMakeLists.txt
LutInterpolator/include/: Cube.hpp  InterpolatorBilinear.hpp  InterpolatorLinear.hpp  InterpolatorTetrahedral.hpp  InterpolatorTrilinear.hpp  InterpolatorUtils.hpp  Lerp.hpp  Lerp3D.hpp  Vertex.hpp  lutInterpolator.hpp
LutInterpolator/src/: LutInterpolatorApi.cpp
LutObject/: CMakeLists.txt
LutObject/include/: CubeLut.h  lut3DL.h  lutCineSpace3D.h  lutCineSpace3D.h~RF113b05a.TMP  lutCube1D.h  lutCube3D.h  lutElement.h  lutErrors.h  lutHald.h
LutObject/src/: CubeLut.cpp  lutCube1D.cpp  lutCube3D.cpp  lutElement.cpp
LutTests/: CMakeLists.txt
LutTests/3DL/: Custom_10bits_17nodes.3dl  Custom_14bits_17nodes.3dl  Test.3dl
LutTests/CSP/: linear_1D.csp  linear_3D.csp  linear_3D_blue.csp  linear_3D_green.csp  linear_3D_red.csp  non-prelut_non-uniform.csp
LutTests/Cube/1D/: ARRI_linear2logc.cube  Identify_33.cube  Identify_65.cube  Identify_65536.cube  negative_1D_1024.cube  negative_1D_16384.cube  negative_1D_32768.cube  negative_1D_4.cube  negative_1D_65536.cube
LutTests/Cube/3D/: Identify_33.cube  Identify_8.cube  Small25.cube  Small25_with_Blob.cube  Small25_with_Domain.cube  Tiny.cube  Tiny_with_Blob.cube
LutTests/Hald/: 0decode.py
LutTests/Matlab/: Gradient.m  RainbowGradient.m
LutTests/Matlab/Lerp/: linear_interp_1D_Lut.m  linear_interp_1d_slice.m  linear_interp_3D_Lut.m  main.m  parse_cube_lut.m  print_lut_entry.m
LutTests/VF/: red_dominant_8x8x8.vf  test.vf
LutTests/cmake/: test_module_api.cmake
LutTests/python/: 0decode.py  colour_lut.py  concatenate_IDAT.py  cube1DGen.py  cube1DGenIdentify.py  cube3DGen.py  cube3DGenIdentify.py  cubeGen.py  get_lut_index_value.py  lut_interpolate_mpmath_ref.py  lut_interpolate_ref.py
LutTests/scripts/: TestAll.cmd  TestAll.sh
LutTests/src/: Crc32Test.cpp  FastComputeTest.cpp  InterpolatorTest.cpp  InterpolatorTest32.cpp  InterpolatorTest64.cpp  Parse3DL.cpp  ParseCsp3d.cpp  ParseCube3d.cpp  ParseCube3dMain.cpp  ParseHald.cpp  SaveCube3d.cpp  StreamPointerTst.cpp  VertexObjTest.cpp
LutUtils/: CMakeLists.txt
LutUtils/HuffmanLib/: CMakeLists.txt
LutUtils/HuffmanLib/include/: CDecoderConstants.h  CDynBlockDecoder.h  CFakedBlockDecoder.h  CHuffmanBlock.h  CHuffmanIo.h  CHuffmanStream.h  CHuffmanStreamPointer.h  CHuffmanTree.h  CReversibleFilter.h  CStatBlockDecoder.h  IBlockDecoder.h  IBlockDecoderInterface.h
LutUtils/HuffmanLib/src/: CDynBlockDecoder.cpp  CFakedBlockDecoder.cpp  CHuffmanBlock.cpp  CHuffmanStream.cpp  CStatBlockDecoder.cpp
LutUtils/include/: BinTree.h  HuffmanStream.h  StreamPointer.h  algorithm.h  base64.h  compute_mode.h  crc_utils.h  deflate_algo_utils.h  deflate_common.h  deflate_decoder.h  deflate_encoder.h  endian_utils.h  fast_compute.h  string_view.h
LutUtils/src/: deflate_decoder.cpp  deflate_encoder.cpp
