cmake_minimum_required (VERSION 3.25)

project (LutInterpolator LANGUAGES CXX)

set (LUT_INTERPOLATOR_SRC_ROOT    ${LUT_LIB_PROJECT_ROOT}/${PROJECT_NAME})
set (LUT_INTERPOLATOR_SRC_CXX_DIR ${LUT_INTERPOLATOR_SRC_ROOT}/src)
set (LUT_INTERPOLATOR_SRC_HXX_DIR ${LUT_INTERPOLATOR_SRC_ROOT}/include)

file(GLOB LUT_INTERPOLATOR_CXX ${LUT_INTERPOLATOR_SRC_CXX_DIR}/*.cpp)
file(GLOB LUT_INTERPOLATOR_HXX ${LUT_INTERPOLATOR_SRC_HXX_DIR}/*.hpp ${LUT_INTERPOLATOR_SRC_HXX_DIR}/*.h)

message (STATUS "C++/H++ files for build project ${PROJECT_NAME}: ${LUT_INTERPOLATOR_CXX} ${LUT_INTERPOLATOR_HXX}")
 
add_library (
	${PROJECT_NAME}
	STATIC
	${LUT_INTERPOLATOR_CXX}
	${LUT_INTERPOLATOR_HXX}
)

target_include_directories (
	${PROJECT_NAME}
	PUBLIC BEFORE
	${LUT_INTERPOLATOR_SRC_HXX_DIR}
)

target_link_libraries (
	${PROJECT_NAME} PUBLIC StringView LutObject ComputeMode
)
	
install (
    TARGETS ${PROJECT_NAME}
    DESTINATION ${CMAKE_INSTALL_LIB_DIRECTORY}
)

