cmake_minimum_required (VERSION 3.25)

message (STATUS "Include LutTests repository")

set (CMAKE_TESTS_API_DIR 	${CMAKE_CURRENT_SOURCE_DIR}/cmake)
list (APPEND CMAKE_MODULE_PATH "${CMAKE_TESTS_API_DIR}")
include ("test_module_api")

set (LUT_TESTS_FILES_FOLDER	${CMAKE_CURRENT_SOURCE_DIR})

# IRIDAS files for tests (CUBE 1D and CUBE 3D format)
set (CUBE_FILES_FOLDER  	${LUT_TESTS_FILES_FOLDER}/Cube)
set (CUBE_1D_FILES_FOLDER  	${CUBE_FILES_FOLDER}/1D)
set (CUBE_3D_FILES_FOLDER  	${CUBE_FILES_FOLDER}/3D)

# Common LUT Format files for tests (CLF files)
set (CLF_FILES_FOLDER		${LUT_TESTS_FILES_FOLDER}/CLF)

# CCF LUT format (CSF files)
set (CSP_FILES_FOLDER		${LUT_TESTS_FILES_FOLDER}/CSP)

# 3DL LUT format (Kodak)
set (3DL_FILES_FOLDER		${LUT_TESTS_FILES_FOLDER}/3DL)

# Hald LUT format
set (HALD_FILES_FOLDER		${LUT_TESTS_FILES_FOLDER}/Hald)

# VF LUT format (NUKE)
set (VF_FILES_FOLDER		${LUT_TESTS_FILES_FOLDER}/VF)

#destination directory for install LUT files for debug and test purposes
# should be defined into cmake file for target/project configuration
get_filename_component(CMAKE_INSTALL_LUT_TST_FULL_PATH ${CMAKE_INSTALL_LUT_TST_DIRECTORY} ABSOLUTE)
		
set (CMAKE_INSTALL_CUBE_LUT_TST_DIRECTORY  ${CMAKE_INSTALL_LUT_TST_FULL_PATH}/CUBE)
set (CMAKE_INSTALL_CLF_LUT_DIRECTORY       ${CMAKE_INSTALL_LUT_TST_FULL_PATH})
set (CMAKE_INSTALL_CSP_LUT_DIRECTORY       ${CMAKE_INSTALL_LUT_TST_FULL_PATH})
set (CMAKE_INSTALL_3DL_LUT_DIRECTORY       ${CMAKE_INSTALL_LUT_TST_FULL_PATH})
set (CMAKE_INSTALL_HALD_LUT_DIRECTORY      ${CMAKE_INSTALL_LUT_TST_FULL_PATH})
set (CMAKE_INSTALL_VF_LUT_DIRECTORY        ${CMAKE_INSTALL_LUT_TST_FULL_PATH})

install (DIRECTORY ${CUBE_3D_FILES_FOLDER} DESTINATION ${CMAKE_INSTALL_CUBE_LUT_TST_DIRECTORY})
install (DIRECTORY ${CUBE_1D_FILES_FOLDER} DESTINATION ${CMAKE_INSTALL_CUBE_LUT_TST_DIRECTORY})
install (DIRECTORY ${CLF_FILES_FOLDER}     DESTINATION ${CMAKE_INSTALL_CLF_LUT_DIRECTORY})
install (DIRECTORY ${CSP_FILES_FOLDER}     DESTINATION ${CMAKE_INSTALL_CSP_LUT_DIRECTORY})
install (DIRECTORY ${3DL_FILES_FOLDER}     DESTINATION ${CMAKE_INSTALL_3DL_LUT_DIRECTORY})
install (DIRECTORY ${HALD_FILES_FOLDER}    DESTINATION ${CMAKE_INSTALL_HALD_LUT_DIRECTORY})
install (DIRECTORY ${VF_FILES_FOLDER}      DESTINATION ${CMAKE_INSTALL_VF_LUT_DIRECTORY})

lutlib_test (
	Crc32Test 
	${LUT_TESTS_FILES_FOLDER}/src/Crc32Test.cpp 
	LutObject # actually we don't needed this library here. Just add it for correct includes and link 
)

set (TST_PRIVATE_COMPILATION_DEFINES -DCUBE_3D_LUT_FOLDER=\"${CMAKE_INSTALL_CUBE_LUT_TST_DIRECTORY}/3D\")
lutlib_test (
	ParseCube3d 
	${LUT_TESTS_FILES_FOLDER}/src/ParseCube3d.cpp 
	LutObject
)


set (TST_PRIVATE_COMPILATION_DEFINES -DCUBE_3D_LUT_FOLDER=\"${CMAKE_INSTALL_CUBE_LUT_TST_DIRECTORY}/3D\")
lutlib_test (
	SaveCube3d 
	${LUT_TESTS_FILES_FOLDER}/src/SaveCube3d.cpp 
	LutObject
)

set (TST_PRIVATE_COMPILATION_DEFINES -DCSP_LUT_FOLDER=\"${CMAKE_INSTALL_CSP_LUT_DIRECTORY}/CSP\")
lutlib_test (
	ParseCsp3d 
	${LUT_TESTS_FILES_FOLDER}/src/ParseCsp3d.cpp 
	LutObject
)

set (TST_PRIVATE_COMPILATION_DEFINES -DHALD_LUT_FOLDER=\"${CMAKE_INSTALL_HALD_LUT_DIRECTORY}/Hald\")
lutlib_test (
	ParseHald 
	${LUT_TESTS_FILES_FOLDER}/src/ParseHald.cpp 
	LutObject)
unset(TST_PRIVATE_LINK_LIBRARIES)


set (TST_PRIVATE_COMPILATION_DEFINES -DTrDL_LUT_FOLDER=\"${CMAKE_INSTALL_3DL_LUT_DIRECTORY}/3DL\")
lutlib_test (
	Parse3DL 
	${LUT_TESTS_FILES_FOLDER}/src/Parse3DL.cpp 
	LutObject)
unset(TST_PRIVATE_LINK_LIBRARIES)

lutlib_test (
	VertexTest 
	${LUT_TESTS_FILES_FOLDER}/src/VertexObjTest.cpp 
	LutInterpolator
)

set (TST_PRIVATE_COMPILATION_DEFINES -DCUBE_3D_LUT_FOLDER=\"${CMAKE_INSTALL_CUBE_LUT_TST_DIRECTORY}/3D\")
lutlib_test (InterpolateCube3d64 ${LUT_TESTS_FILES_FOLDER}/src/InterpolatorTest64.cpp LutInterpolator)

set (TST_PRIVATE_COMPILATION_DEFINES -DCUBE_3D_LUT_FOLDER=\"${CMAKE_INSTALL_CUBE_LUT_TST_DIRECTORY}/3D\")
lutlib_test (InterpolateCube3d32 ${LUT_TESTS_FILES_FOLDER}/src/InterpolatorTest32.cpp LutInterpolator)


if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
install(FILES "scripts/TestAll.cmd"
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    DESTINATION ${CMAKE_INSTALL_TST_DIRECTORY})
endif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")

if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
install(FILES "scripts/TestAll.sh"
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    DESTINATION ${CMAKE_INSTALL_TST_DIRECTORY})
endif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
