cmake_minimum_required (VERSION 3.25)

project (HuffmanLib LANGUAGES CXX)

set (HUFFMAN_OBJECT_SRC_ROOT	${CMAKE_CURRENT_SOURCE_DIR})
set (HUFFMAN_OBJECT_SRC_CXX_DIR ${HUFFMAN_OBJECT_SRC_ROOT}/src)
set (HUFFMAN_OBJECT_SRC_HXX_DIR ${HUFFMAN_OBJECT_SRC_ROOT}/include)

file(GLOB HUFFMAN_OBJECT_CXX ${HUFFMAN_OBJECT_SRC_CXX_DIR}/*.cpp)
file(GLOB HUFFMAN_OBJECT_HXX ${HUFFMAN_OBJECT_SRC_HXX_DIR}/*.hpp ${HUFFMAN_OBJECT_SRC_HXX_DIR}/*.h)

message (STATUS "C++ files for build project ${PROJECT_NAME}: ${HUFFMAN_OBJECT_CXX}")
 
add_library (
	${PROJECT_NAME}
	STATIC
	${HUFFMAN_OBJECT_CXX}
	${HUFFMAN_OBJECT_HXX}
)

target_include_directories (
	${PROJECT_NAME}
	PUBLIC BEFORE
	${HUFFMAN_OBJECT_SRC_HXX_DIR}
)
	
install (
    TARGETS ${PROJECT_NAME}
	DESTINATION ${CMAKE_INSTALL_LIB_DIRECTORY}
)

